--- a/.gitignore
+++ b/.gitignore
@@ -16,16 +16,26 @@
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/*
-/nbdist/
-/.nb-gradle/
+# Compiled class file
+*.class
 
+# Log file
 *.log
-*.gz
-*.tmp
 
-.idea/*
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
